--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ ________________________________________________________________________________
 ________________________________________________________________________________________________
 
 <br><br>
-<a href="#" onclick="js()"><font size=5>Javascripts</a>&emsp;
-<a href="#"  onclick="serverscript()">Server Scripts</a>&emsp;
-<a  href="#" onclick="html()">Htmls</a>&emsp;
-<a href="#"  onclick="others()">Others </a>&emsp;
-<a href="#"  onclick="about()">About </font></a>&emsp;<br><br>
+
+<a id=j href="#"  onclick="js();changeSelectedColor('j')"><font size=5>Javascripts</a>&emsp;
+<a id=s href="#"  onclick="serverscript();changeSelectedColor('s')">Server Scripts</a>&emsp;
+<a id=h href="#"  onclick="html();changeSelectedColor('h')">Htmls</a>&emsp;
+<a id=o href="#"  onclick="others();changeSelectedColor('o')">Others </a>&emsp;
+<a id=a href="#"  onclick="about();changeSelectedColor('a')">About </font></a>&emsp;<br><br>
 
 </center>
 
@@ -28,6 +29,23 @@ ________________________________________________________________________________
 
 <script>
 
+
+function changeSelectedColor(item){
+j=document.getElementById('j')
+s=document.getElementById('s')
+h=document.getElementById('h')
+o=document.getElementById('o')
+a=document.getElementById('a')
+
+j.style.color='black';
+s.style.color='black';
+h.style.color='black';
+o.style.color='black';
+a.style.color='black';
+
+eval(item+".style.color='red'")
+
+}
 
 var xmlhttp = new XMLHttpRequest();
 var x=document.getElementById("links");
