--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ function arrange(data){
         	if(temp[key_].length>1)
         	{
         		id=parseInt(key_)+1
-        		x.innerHTML=x.innerHTML+id+"]&emsp;<font size=4 color=green>"+temp[key_]+"</font></br>"
+        		x.innerHTML=x.innerHTML+"<font size=1 color=yellow>>&emsp;<font size=4 color=green>"+temp[key_]+"</font></br>"
         	}
         }
     }
