--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 ________________________________________________________________________________________________
 <br><br>
 <font color=black size=5>Ignored Extensions : <font color=yellow size=5><script>document.write(disallowed_ext)</script><br>
-<font color=black size=5>HTML Extensions : <font color=yellow size=5><script>document.write(html_list)</script><br>
-<font color=black size=5>Server Scripts Extensions : <font color=yellow size=5><script>document.write(scripts_list)</script><br></font>
+<font color=black size=5>Static Extensions : <font color=yellow size=5><script>document.write(static_extensions)</script><br>
+<font color=black size=5>Scripts Extensions : <font color=yellow size=5><script>document.write(scripts_extensions)</script><br></font>
 ________________________________________________________________________________________________
 
 <br><br>
